# SMNBody

./: CMakeLists.txt  main.cpp
include/: GravityFunction.h  Particle.h  Sim.h  TreeNode.h  Vector2.h  constants.h  types.h
src/: GravityFunction.cpp  Particle.cpp  Sim.cpp  TreeNode.cpp  Vector2.cpp
